...
                            <constraint firstItem="kW9-zF-CVb" firstAttribute="trailing" secondItem="uW0-rM-AgY" secondAttribute="trailing" id="chi-nk-agy"/>
                            <constraint firstItem="uW0-rM-AgY" firstAttribute="trailing" secondItem="Ozd-am-bdk" secondAttribute="trailing" id="fQJ-cg-b5W"/>
                            <constraint firstItem="kW9-zF-CVb" firstAttribute="top" secondItem="uW0-rM-AgY" secondAttribute="top" id="oyp-lw-Ffn"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="uW0-rM-AgY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Groups" id="Foe-ls-fRF">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="XMX-Hz-RfT">
                            <connections>
                                <action selector="addGroup" destination="3QF-4g-DRm" id="9Pd-nv-wdx"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
